# io

./: .gitignore  CMakeLists.txt  README.md
beviamo/: CMakeLists.txt  beviamo.pro  beviamo.pro.user.98cf108  beviamo.pro.user.e51636c  client.cpp  client.h  commenthandler.cpp  commenthandler.h  cppclass.cpp  cppclass.h  createEvent.qml  deployment.pri  event.cpp  event.h  event.qml  eventMenu.qml  friendsMenu.qml  global.cpp  global.h  logIn.qml  main.cpp  main.qml  qml.qrc  signUp.qml
beviamo/images/icon/: Thumbs.db
beviamo/qml/: MainForm.ui.qml  welcome.qml
beviamo/qrc/: FacebookView.qml  addFriends.qml  comments.qml  createEvent.qml  event.qml  eventMenu.qml  fbLogOut.qml  friendsMenu.qml  logIn.qml  main.qml  signUp.qml  welcome.qml
client/: CMakeLists.txt  client.cpp
client/src/: CMakeLists.txt  client.cpp  client.h  main.cpp
db/: createDB.sql  createDB.sql~  removeDB.sql  removeDB.sql~  simpleDB.vpp
server/: CMakeLists.txt  connectionthread.cpp  connectionthread.h  dbcontroller.cpp  server.cpp  server.h  server.pro
server/src/: CMakeLists.txt  connectionthread.cpp  connectionthread.h  dbcontroller.cpp  dbcontroller.h  fbsync.cpp  fbsync.h  main.cpp  server.cpp  server.h
server/tests/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt  comment.cpp  comment.h  dbcontroller.h  event.cpp  event.h  fbsync.cpp  fbsync.h  global.cpp  global.h  serializationexception.cpp  serializationexception.h  user.cpp  user.h
